--- a/package.json
+++ b/package.json
@@ -4,12 +4,19 @@
   "private": true,
   "proxy": "http://localhost:5000",
   "dependencies": {
+    "@emotion/react": "^11.6.0",
+    "@emotion/styled": "^11.6.0",
+    "@material-ui/core": "^4.12.3",
+    "@mui/material": "^5.1.1",
+    "@mui/styled-engine-sc": "^5.1.0",
     "axios": "^0.21.1",
     "express": "^4.17.1",
     "pg": "^8.2.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-scripts": "^4.0.1"
+    "react-redux": "^7.2.6",
+    "react-scripts": "^4.0.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "nodemon": "^1.18.5"
