--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "react-dom": "^17.0.1",
     "react-redux": "^7.2.6",
     "react-scripts": "^4.0.1",
+    "redux-logger": "^3.0.6",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {
-    "nodemon": "^1.18.5"
+    "nodemon": "^1.18.5",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "node server/server.js",
